tests/snapshots/parse_emph_01.snap
---
source: src/parser.rs
expression: output
---
Emph
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "verbatim"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Asterisk: "*"
