tests/snapshots/parse_emph_04.snap
---
source: src/parser.rs
expression: output
---
Emph
  Asterisk: "*"
  Error: " " (unexpected WhiteSpace)
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "verbatim"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    Error: " " (unexpected WhiteSpace)
  Asterisk: "*"
