tests/snapshots/parse_para_segment_01_err.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  TextChunk
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    Error: " " (unexpected WhiteSpace)
  Verbatim
    Error: "|" (unclosed delimiter)
    TextChunk
      Word: "a"
      WhiteSpace: " "
      Word: "verbatim"
      WhiteSpace: " "
      Word: "text"
      WhiteSpace: " "
      Word: "chunk"
