tests/snapshots/parse_para_segment_03_err.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  TextChunk
    Word: "this"
    WhiteSpace: " "
    Word: "isrbatim"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  LineEnding: "\n"
