tests/snapshots/parse_parabreak_02.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    TextChunk
      WhiteSpace: " "
      Word: "I"
      WhiteSpace: " "
      Word: "am"
      WhiteSpace: " "
      Word: "a"
      WhiteSpace: " "
      Word: "paragraph"
      WhiteSpace: " "
      Word: "segment"
      Dot: "."
    LineEnding: "\n"
  ParaSegment
    TextChunk
      Word: "I"
      WhiteSpace: " "
      Word: "am"
      WhiteSpace: " "
      Word: "another"
      WhiteSpace: " "
      Word: "paragraph"
      WhiteSpace: " "
      Word: "segment"
      Dot: "."
    LineEnding: "\n"
  ParaBreak
    WhiteSpace: "      "
    LineEnding: "\n"
  ParaSegment
    TextChunk
      Word: "this"
      WhiteSpace: " "
    Verbatim
      Pipe: "|"
      TextChunk
        Word: "is"
        WhiteSpace: " "
        Word: "verbatim"
      Pipe: "|"
    TextChunk
      WhiteSpace: " "
      Word: "content"
      WhiteSpace: " "
    Emph
      Asterisk: "*"
      TextChunk
        Word: "this"
        WhiteSpace: " "
        Word: "is"
        WhiteSpace: " "
        Word: "bold"
      Asterisk: "*"
    LineEnding: "\n"
  ParaSegment
    TextChunk
      WhiteSpace: "    "
      Word: "Together"
      WhiteSpace: " "
      Word: "we"
      WhiteSpace: " "
      Word: "form"
      WhiteSpace: " "
      Word: "a"
      WhiteSpace: " "
      Word: "paragraph"
      Dot: "."
