tests/snapshots/parse_paragraph_01.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    TextChunk
      Word: "this"
      WhiteSpace: " "
      Word: "isrbatim"
      WhiteSpace: " "
      Word: "text"
      WhiteSpace: " "
      Word: "chunk"
    LineEnding: "\n"
  ParaSegment
    TextChunk
      Word: "this"
      WhiteSpace: " "
      Word: "is"
      WhiteSpace: " "
      Word: "next"
